typescript/checker/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration4.ts.stderr
error: Unexpected token Some(Word(constructor))
 --> $DIR/tests/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration4.ts:2:11
  |
2 |   declare constructor() { }
  |           ^^^^^^^^^^^

